# evm-fork-cache

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml
benches/: access_list.rs  create3.rs  event_pipeline.rs  fanout.rs  freshness.rs  mapping_probe.rs  reactive_routing.rs  revert_decoding.rs  rpc_mainnet.rs  simulation.rs  state_update.rs  storage_keys.rs
docs/: INTERNALS.md  KNOWN_ISSUES.md  ROADMAP.md  bulk-storage-extraction.md  phase-2-spec.md  phase-3-spec.md  phase-4-spec.md  phase-5-spec.md  phase-6-bundle-sim-spec.md  phase-8-liveness-spec.md  trace-resync-benchmarks.md  v0.2.0-release-plan.md  verified-code-seeding-spec.md
examples/: bulk_storage_bench.rs  bundle_simulation.rs  call_tracer.rs  cold_start.rs  create3_addresses.rs  custom_revert_errors.rs  deploy_and_override.rs  discover_and_track.rs  erc20_balance_override.rs  fetch_minimization_counted.rs  fork_override_balance.rs  fork_token_balance.rs  foundry_artifact_etching.rs  freshness_multi_sim.rs  freshness_optimistic.rs  mock_and_simulate.rs  multi_hop_swap.rs  multicall_batch.rs  multicall_with_error_handling.rs  parallel_overlays.rs  prefetch_registry.rs  reactive_alloy_amm_live_probe.rs  reactive_cache.rs  reactive_engine_lifecycle.rs  reactive_runtime.rs  revert_decoding.rs  snapshot_and_restore.rs  state_update_apply.rs  storage_access_list.rs  transfer_inspector.rs
examples/support/: mock.rs
fixtures/: EventGroundTruthPool.sol  MockERC20.foundry.json  MockERC20.sol  README.md  mock_erc20_creation.hex  mock_erc20_runtime.hex  multicall3_runtime.hex  test_v3_pool_creation.hex
src/: access_list.rs  access_set.rs  bulk_storage.rs  bundle.rs  create3.rs  deploy.rs  errors.rs  freshness.rs  inspector.rs  lib.rs  mapping_probe.rs  multicall.rs  prefetch_registry.rs  state_update.rs  tracing.rs
src/cache/: binary_state.rs  bytecode.rs  code_seeds.rs  journal_access_list.rs  metadata.rs  mod.rs  overlay.rs  slot_observations.rs  snapshot.rs  storage_keys.rs  tick_snapshot.rs  versioned.rs
src/cold_start/: account_round.rs  config.rs  driver.rs  error.rs  mod.rs  plan.rs  planner.rs  results.rs  roots.rs  storage_round.rs
src/events/: erc20.rs  mod.rs  uniswap_v3.rs
src/reactive/: mod.rs
tests/: block_context.rs  builder_chain_id.rs  bulk_storage.rs  bundle_simulation.rs  bundle_simulation_extra.rs  cache_state.rs  call_tracer.rs  code_seeding.rs  cold_start.rs  cow_snapshot.rs  errors.rs  event_ground_truth.rs  event_pipeline.rs  fetch_minimization.rs  freshness.rs  liveness_cold_start.rs  liveness_root_gate.rs  mapping_probe.rs  multicall.rs  prepared_cold_start.rs  public_release_surface.rs  reactive_alloy_subscriber.rs  reactive_engine.rs  reactive_freshness.rs  reactive_health.rs  reactive_registry.rs  reactive_reorg.rs  reactive_resync.rs  reactive_router.rs  reactive_runtime.rs  reactive_subscriber_ingest.rs  reactive_trace_resync.rs  serialization_roundtrip.rs  shared_memory_capacity.rs  snapshot_overlay.rs  state_update.rs  storage_keys.rs  transfer_inspector.rs  typed_sol_call.rs
tests/common/: mod.rs
