[package]
name = "evm-fork-cache"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Forked EVM state cache, snapshots, overlays, and simulation utilities for EVM search"
keywords = ["evm", "revm", "defi", "simulation", "ethereum"]
categories = ["cryptography::cryptocurrencies", "simulation", "caching"]
readme = "README.md"
repository = "https://github.com/KaiCode2/evm-fork-cache"
documentation = "https://docs.rs/evm-fork-cache"

# Standalone workspace root: keeps this crate from being absorbed by any
# ancestor-directory workspace and gives it its own Cargo.lock.
[workspace]

[features]
default = ["reactive"]
reactive = []

[dependencies]
alloy-consensus = "1.1.2"
alloy-contract = "1.0.38"
alloy-eips = "1.0.38"
alloy-network = "1.0.38"
alloy-primitives = { version = "1.4", features = ["map"] }
alloy-provider = "1.0.38"
alloy-rlp = "0.3"
alloy-rpc-client = "1.0.38"
alloy-rpc-types-eth = "1.0.38"
alloy-sol-types = "1.4"

futures = "0.3"
anyhow = "1.0.98"
bincode = "1.3"
foundry-fork-db = "0.22"
revm = { version = "34.0", features = ["std", "serde", "optional_eip3607", "optional_no_base_fee", "optional_balance_check"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
alloy-node-bindings = "1.1.2"
alloy-rpc-client = { version = "1.0.38", features = ["reqwest"] }
alloy-transport = "1.0.38"
alloy-transport-http = "1.0.38"
criterion = "0.5"
# `macros` powers `#[tokio::main]`/`#[tokio::test]` in the examples and tests.
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "revert_decoding"
harness = false

[[bench]]
name = "create3"
harness = false

[[bench]]
name = "access_list"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "freshness"
harness = false

[[bench]]
name = "state_update"
harness = false

[[bench]]
name = "event_pipeline"
harness = false

# RPC-gated real-contract benchmarks. Skipped (not failed) when RPC_URL is unset,
# so `cargo bench` stays offline by default.
[[bench]]
name = "rpc_mainnet"
harness = false
